--- a/style.css
+++ b/style.css
@@ -14,4 +14,8 @@
     .link-active {
         @apply border-green-500 border-b-4 text-green-500
     }
+
+    .footer-title {
+        @apply text-green-500 uppercase tracking-wide font-semibold
+    }
 }
